fix: adjust the exporters to be backward compatible
The decisionEvaluationInstanceKey might be empty if the record is processed by an older version of Zeebe.
For this reason the exporters need to be fault tolerant and rollback to the legacy way of computing the ids.